<Modify Files> <Added file>
Modify the main function
Added MainMenu.cpp 
(Game Not Working)

--- a/Mancala Group 7 Project/Mancala Group 7 Project/Mancala Group 7 Project.vcxproj
+++ b/Mancala Group 7 Project/Mancala Group 7 Project/Mancala Group 7 Project.vcxproj
@@ -117,6 +117,7 @@
   <ItemGroup>
     <ClCompile Include="BoardGame.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="MainMenu.cpp" />
     <ClCompile Include="title.cpp" />
     <ClCompile Include="Player.cpp" />
   </ItemGroup>
