--- a/Mancala Group 7 Project/Mancala Group 7 Project/Mancala Group 7 Project.vcxproj.filters
+++ b/Mancala Group 7 Project/Mancala Group 7 Project/Mancala Group 7 Project.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="BoardGame.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MainMenu.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Player.h">
