--- a/Mancala Group 7 Project/Mancala Group 7 Project/Mancala Group 7 Project.vcxproj
+++ b/Mancala Group 7 Project/Mancala Group 7 Project/Mancala Group 7 Project.vcxproj
@@ -116,6 +116,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="BoardGame.cpp" />
+    <ClCompile Include="Instructions.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="title.cpp" />
     <ClCompile Include="Player.cpp" />
